# confetti

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  __main__.py  build.gradle.kts  go.mod  go.sum  main.go  pyproject.toml  settings.gradle.kts
.fleet/: run.json  settings.json
.github/workflows/: do.yml  go.yml
cmd/: migrate.go  root.go  serve.go  test.go
docs/: docs.go  swagger.json  swagger.yaml
keys/: key.pem
migrations/: 00000001_initial.down.sql  00000001_initial.up.sql  000001_initial.up.sql
platform/db/: db.go
platform/entities/: cards.go  events.go  users.go
platform/handlers/: accounts.go  app.go  auth.go  base.go  cards.go  handler.go  params.go  system.go  users.go
platform/http/: responses.go
platform/keys/: loader.go
platform/mailer/: dummy.go  gmail.go  mailer.go  mailjet.go  sendgrid.go
platform/middleware/: auth.go
platform/mocks/: cards.go  events.go  users.go
platform/repo/: cards.go  events.go  repo.go  users.go
platform/schema/: auth.go  cards.go  events.go  health.go  user.go  users.go
platform/services/: auth.go  cards.go  jwx.go  users.go
platform/shared/: contstants.go  error.go  error_handler.go  service_error.go  util.go
scripts/: run.sh  settings.py
src/main/kotlin/io/getout/app/: Application.kt
src/main/kotlin/io/getout/app/messages/: Message.kt
src/main/kotlin/io/getout/app/system/controllers/: Health.kt
src/main/kotlin/io/getout/app/users/: User.kt
src/test/kotlin/io/getout/app/: AppApplicationTests.kt
util/: auth.go  event.go
