[tool.poetry]
name = "getout"
version = "0.1.0"
description = ""
authors = ["Sultan Iman <sultan.imanhodjaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
asyncpg = "^0.25.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
